[gd_scene load_steps=9 format=3 uid="uid://085m0pgrbo2t"]

[ext_resource type="PackedScene" uid="uid://deotsx23pqaeq" path="res://cenas/cartas/card.tscn" id="1_imruo"]
[ext_resource type="Script" uid="uid://dihmhps8cwpkg" path="res://cenas/cartas/CardContainer.gd" id="1_xeshw"]
[ext_resource type="Script" uid="uid://b45rerfjvt0jk" path="res://cenas/cartas/carta_explosao.gd" id="3_iwi6y"]
[ext_resource type="Script" uid="uid://wuu46tunc151" path="res://cenas/cartas/carta_cura.gd" id="3_r6xlp"]
[ext_resource type="PackedScene" uid="uid://b6suxxafyeg30" path="res://cenas/cartas/passivas/carta_atk_basico.tscn" id="3_wy276"]
[ext_resource type="Script" uid="uid://cyf5wvgaw34od" path="res://cenas/cartas/CardPlacement.gd" id="3_yxjxn"]
[ext_resource type="Script" uid="uid://dxxld8b4o6y62" path="res://cenas/cartas/carta_velocidade.gd" id="4_mmd6q"]
[ext_resource type="Script" uid="uid://de4bmunpvd2bs" path="res://cenas/cartas/carta_atk_basico.gd" id="4_pei1p"]

[node name="Board" type="Node"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CardContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 530.0
offset_bottom = -512.0
grow_vertical = 2
theme_override_constants/separation = -20
alignment = 1
script = ExtResource("1_xeshw")

[node name="Card1" parent="UI/CardContainer" instance=ExtResource("1_imruo")]
layout_mode = 2

[node name="Card2" parent="UI/CardContainer" instance=ExtResource("1_imruo")]
layout_mode = 2

[node name="Card3" parent="UI/CardContainer" instance=ExtResource("1_imruo")]
layout_mode = 2

[node name="carta_explosao" parent="UI/CardContainer" instance=ExtResource("1_imruo")]
layout_mode = 2
script = ExtResource("3_iwi6y")

[node name="carta_velocidade" parent="UI/CardContainer" instance=ExtResource("1_imruo")]
layout_mode = 2
script = ExtResource("4_mmd6q")

[node name="carta_cura" parent="UI/CardContainer" instance=ExtResource("1_imruo")]
layout_mode = 2
script = ExtResource("3_r6xlp")

[node name="carta_atk_basico" parent="UI/CardContainer" instance=ExtResource("3_wy276")]
layout_mode = 2
script = ExtResource("4_pei1p")

[node name="CardPlacement" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = 177.0
offset_right = 768.0
offset_bottom = 412.0
script = ExtResource("3_yxjxn")

[node name="CardHolder" type="Node" parent="."]

[connection signal="mouse_entered" from="UI/CardContainer" to="UI/CardContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/CardContainer" to="UI/CardContainer" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="UI/CardPlacement" to="UI/CardPlacement" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="UI/CardPlacement" to="UI/CardPlacement" method="_on_mouse_exited"]
